add getAllCategories endpoint
