# app.js
@@ -8,6 +8,8 @@ const swaggerDocument = require("./swagger.json");
 const path = require("path");
 
 const noticeRouter = require("./routes/api/notices/notices-routes");
+const mainRouter = require("./routes/api/main/main-routes");
+
 const app = express();
 const router = express.Router();
 
@@ -32,6 +34,7 @@ app.use(express.static("public"));
 app.use(express.json());
 
 app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
+app.use("/api/main", mainRouter);
 app.use("/api/notices", noticeRouter);
 
 
